// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render simple timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate smallDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-year-0"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-date-0"
            >
              20 Apr
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`render simple timeline graph with time 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate smallDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-year-0"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-date-0"
            >
              20 Apr
            </p>
            <p
              class="MuiTypography-root timelineDate smallDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-time-0"
            >
              16:20
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaper MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test selecting an item on the timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate smallDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-year-0"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-date-0"
            >
              20 Apr
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaperButton MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`test unselecting an item on the timeline graph 1`] = `
<div>
  <div
    class="timelineContainer"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation6 MuiPaper-rounded MuiCard-root timelineCard"
    >
      <div
        class="timelineContent"
      >
        <div
          class="MuiGrid-container MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
        >
          <div
            class="timelineDateContainer"
          >
            <p
              class="MuiTypography-root timelineDate smallDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-year-0"
            >
              2018
            </p>
            <p
              class="MuiTypography-root timelineDate MuiTypography-body1 MuiTypography-alignCenter"
              data-testid="timeline-date-0"
            >
              20 Apr
            </p>
          </div>
          <div
            class="timeline timelineStart timelineEnd"
          >
            <div
              class="notch selected"
            />
          </div>
          <div
            class="MuiPaper-root timelinePaperButton MuiPaper-elevation4 MuiPaper-rounded"
            data-testid="timeline-item-0"
            id="0"
          >
            <div
              class="paperContent"
            >
              <div>
                Testing
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
